--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section id="Contact">
             <div class="contact">
                 <h2>Contact Me</h2>
-                <form action="mailto:your-email@example.com" method="POST" enctype="text/plain">
+                <form action="mailto:jccalimbahin23@gmail.com" method="POST" enctype="text/plain">
                     <div class="forms">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
