--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Section 1 Hero Section -->
          <section class="hero-section">
             <div class="about">
-                <h2 class="animated">Hi, I'm John Cedrick Calimbahin</h2>
+                <h2>Hi, I'm John Cedrick Calimbahin</h2>
                 <p>I am a Computer Engineering graduate with a deep passion for technology. I’ve always had a fascination with both software and hardware, and I love diving into the challenge of troubleshooting and solving complex problems.</p>
 
                 <p>As a beginner in the world of web development, I decided to pursue a career as a Full Stack Web Developer, blending my engineering background with my interest in creating innovative digital experiences. To accelerate my journey, I enrolled in the Uplift Bootcamp, where I’m currently honing my skills in both front-end and back-end development.</p>
@@ -96,7 +96,7 @@
         <section id="Contact">
             <div class="contact">
                 <h2>Contact Me</h2>
-                <form action="mailto:jccalimbahin23@gmail.com" method="POST" enctype="text/plain">
+                <form action="mailto:jccalimbahin23@gmail.com" method="post" enctype="text/plain">
                     <div class="forms">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
