--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="links">
                     <a href="#Skills">
                         <i class="fa-solid fa-code"></i>
-                        <span>Skills</span>
+                        <span>My Skills</span>
                     </a>
                     <a href="#Resume">
                         <i class="fa-solid fa-file"></i>
@@ -59,7 +59,7 @@
                     </a>
                     <a href="#Contact">
                         <i class="fa-regular fa-envelope"></i>
-                        <span>Contacts</span>
+                        <span>Contact Me</span>
                     </a>
                 </div>
             </div>
