--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Nav Bar -->
-     <nav>
+    <nav>
         <div class="Left">
             <a href="/">JCedrick</a>
         </div>
@@ -33,11 +33,11 @@
                 <span>linkedin</span>
                 </a>
         </div>
-     </nav>
+    </nav>
 
-     <main>
+    <main>
         <!-- Section 1 Hero Section -->
-         <section class="hero-section">
+        <section class="hero-section">
             <div class="about">
                 <h2>Hi, I'm John Cedrick Calimbahin</h2>
                 <p>I am a Computer Engineering graduate with a deep passion for technology. I’ve always had a fascination with both software and hardware, and I love diving into the challenge of troubleshooting and solving complex problems.</p>
@@ -67,7 +67,7 @@
             <div class="pic">
                 <img src="photo/cedrick-crop.png" alt="Cedrick" width="350px">
             </div>
-         </section>
+        </section>
 
         <!-- Section 2 Skills -->
         <section class="skill-section" id="Skills">
@@ -96,7 +96,7 @@
         <section id="Contact">
             <div class="contact">
                 <h2>Contact Me</h2>
-                <form action="mailto:jccalimbahin23@gmail.com" method="post" enctype="text/plain">
+                <form action="https://formsubmit.co/jccalimbahin23@gmail.com" method="post" enctype="text/plain">
                     <div class="forms">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
@@ -119,6 +119,6 @@
         <p>© 2024 John Cedrick Calimbahin. All Rights Reserved.</p>
     </footer>
     
-     </main>
+    </main>
 </body>
 </html>
