--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="pic">
-                <img src="photo/cedrick-crop.png" alt="Cedrick" width="350px">
+                <img src="Multimedia/cedrick-crop.png" alt="Cedrick" width="350px">
             </div>
         </section>
 
@@ -74,11 +74,11 @@
             <h2>Skills</h2>
             <div class="skills">
                 <div class="skill">
-                    <img src="photo/html.png" alt="html" width="200px">
+                    <img src="Multimedia/html.png" alt="html" width="200px">
                 </div>
             <div class="skills">
                 <div class="skill">
-                    <img src="photo/css.png" alt="css"width= "200px">
+                    <img src="Multimedia/css.png" alt="css"width= "200px">
                 </div>
             </div>
         </section>
@@ -87,16 +87,16 @@
         <section id="Resume" class="resume">
             <h2>My Resume</h2>
 
-            <a href="photo/Calimbahin John Cedrick - RESUME (2).pdf" target="_blank" class="view-btn">View Resume</a>
+            <a href="Multimedia/Calimbahin John Cedrick - RESUME (2).pdf" target="_blank" class="view-btn">View Resume</a>
 
-            <a href="photo/Calimbahin John Cedrick - RESUME (2).pdf" class="dl-btn" download="Calimbahin John Cedrick - RESUME.pdf">Download Resume</a>
+            <a href="Multimedia/Calimbahin John Cedrick - RESUME (2).pdf" class="dl-btn" download="Calimbahin John Cedrick - RESUME.pdf">Download Resume</a>
         </section>
         
         <!-- Section 4 Contact Me -->
         <section id="Contact">
             <div class="contact">
                 <h2>Contact Me</h2>
-                <form action="https://formsubmit.co/jccalimbahin23@gmail.com" method="post" enctype="text/plain">
+                <form action="mailto:jccalimbahin23@gmail.com" method="post" enctype="text/plain">
                     <div class="forms">
                         <label for="name">Name:</label>
                         <input type="text" id="name" name="name" required>
