--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Nav Bar -->
     <nav>
         <div class="Left">
-            <a href="/">JCedrick</a>
+            <a href="https://tikpos.github.io/test-repo/">JCedrick</a>
         </div>
         <div class="Right">
             <a href="https://github.com/Tikpos" target="_blank" rel="noopener noreferrer">
