--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Nav Bar -->
     <nav>
         <div class="Left">
-            <a href="https://tikpos.github.io/test-repo/">JCedrick</a>
+            <a href="#JCedrick">JCedrick</a>
         </div>
         <div class="Right">
             <a href="https://github.com/Tikpos" target="_blank" rel="noopener noreferrer">
@@ -37,7 +37,7 @@
 
     <main>
         <!-- Section 1 Hero Section -->
-        <section class="hero-section">
+        <section class="hero-section" id="JCedrick">
             <div class="about">
                 <h2>Hi, I'm John Cedrick Calimbahin</h2>
                 <p>I am a Computer Engineering graduate with a deep passion for technology. I’ve always had a fascination with both software and hardware, and I love diving into the challenge of troubleshooting and solving complex problems.</p>
